Create form add proxy

--- a/Spotify/SPOTIFYServer/login/Templates/Components/Layout.html
+++ b/Spotify/SPOTIFYServer/login/Templates/Components/Layout.html
@@ -17,7 +17,7 @@
 <body>
 
 {% block content %}{% endblock %}
-<script type="text/javascript" src="{% static "vendor/jquery-3.7.0.min.js" %}"></script>
+<script type="text/javascript" src="{% static "vendor/jquery/jquery.min.js" %}"></script>
 <script src="{% static "vendor/bootstrap-table/bootstrap-table.min.js" %}"></script>
 <script src="{% static "vendor/bootstrap-table/extensions/fixed-columns/bootstrap-table-fixed-columns.js" %}"></script>
 <script type="text/javascript" src="{% static "vendor/mdb5/js/mdb.min.js" %}"></script>
