--- a/Spotify/SPOTIFYServer/login/static/css/common.css
+++ b/Spotify/SPOTIFYServer/login/static/css/common.css
@@ -74,6 +74,10 @@ tr:hover td {
   max-height: 2.2rem;
 }
 
+#addNewProxy input {
+  max-height: 2.2rem !important;
+}
+
 td.accountDetails .row:last-child {
   border-bottom: none !important; 
 }
