Fix issue nation code

--- a/Spotify/SPOTIFYServer/login/Templates/Spotify_control_proxy.html
+++ b/Spotify/SPOTIFYServer/login/Templates/Spotify_control_proxy.html
@@ -243,7 +243,7 @@
 
       <div class="mb-4">
         <label for="nation" class="form-label">Nation</label>
-        <select class="form-select me-2 required-field" aria-label="nation"
+        <select class="form-select me-2 required-field nation" aria-label="nation"
           id="nation" name="nation">
           <option value ="IN">Indian</option>
           <option value ="TR">Turkey</option>
